﻿V.4 (alpha)



V.3 (alpha)					29th June 2017

	Notice:
		Due to a new internal level structure, all saves prior to this version will be erased

	New:
		Tutorial levels and new or reworked levels
		3 new retiree sprites
		1 new nurse sprites
		1 new cop sprites

	Changes:
		Reworked MacOS and Linux runtime for better compatibility and performance.


V.2 (alpha)					2nd June 2017

	First public release